// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dietaries /> Default Variant should match snapshot if value's length is greater than 0 1`] = `
<WithStyles(GridContainer)
  direction="column"
  spacing={3}
  wrap="nowrap"
>
  <WithStyles(GridItem)>
    <WithStyles(GridContainer)
      alignItems="baseline"
      wrap="nowrap"
    >
      <WithStyles(GridItem)
        xs={true}
      >
        <WithStyles(GridContainer)
          alignItems="baseline"
          noWrap={true}
          spacing={0}
        >
          <WithStyles(GridItem)>
            <WithStyles(EditableLabel)>
              <FormattedMessage
                defaultMessage="Dietary Requirements"
                id="app.smartComponents.Person.parts.Dietaries.label"
              />
            </WithStyles(EditableLabel)>
          </WithStyles(GridItem)>
        </WithStyles(GridContainer)>
      </WithStyles(GridItem)>
      <WithStyles(GridItem)>
        <WithStyles(Connect(WithSimplifyResaga(DietaryCreate)))
          id={null}
        />
      </WithStyles(GridItem)>
    </WithStyles(GridContainer)>
  </WithStyles(GridItem)>
  <WithStyles(GridItem)>
    <WithStyles(GridContainer)
      direction="column"
      wrap="nowrap"
    >
      <WithStyles(GridItem)
        key="dietary.1"
      >
        <ConnectFunction
          id={1}
          readOnly={false}
          variant="editable"
        />
      </WithStyles(GridItem)>
      <WithStyles(GridItem)
        key="dietary.2"
      >
        <ConnectFunction
          id={2}
          readOnly={false}
          variant="editable"
        />
      </WithStyles(GridItem)>
    </WithStyles(GridContainer)>
  </WithStyles(GridItem)>
</WithStyles(GridContainer)>
`;

exports[`<Dietaries /> Default Variant should match snapshot if value's length is less than 1 1`] = `
<WithStyles(GridContainer)
  direction="column"
  spacing={0}
  wrap="nowrap"
>
  <WithStyles(GridItem)>
    <WithStyles(GridContainer)
      alignItems="baseline"
      wrap="nowrap"
    >
      <WithStyles(GridItem)
        xs={true}
      >
        <WithStyles(GridContainer)
          alignItems="baseline"
          noWrap={true}
          spacing={0}
        >
          <WithStyles(GridItem)>
            <WithStyles(EditableLabel)>
              <FormattedMessage
                defaultMessage="Dietary Requirements"
                id="app.smartComponents.Person.parts.Dietaries.label"
              />
            </WithStyles(EditableLabel)>
          </WithStyles(GridItem)>
          <WithStyles(GridItem)>
            <Styled(MuiBox)
              pl={1}
            >
              <ConnectFunction
                disabled={false}
                id={null}
              />
            </Styled(MuiBox)>
          </WithStyles(GridItem)>
        </WithStyles(GridContainer)>
      </WithStyles(GridItem)>
      <WithStyles(GridItem) />
    </WithStyles(GridContainer)>
  </WithStyles(GridItem)>
  <WithStyles(Connect(WithSimplifyResaga(Empty)))
    description={
      <WithStyles(EditablePlaceholder)>
        <FormattedMessage
          defaultMessage="Enter dietary requirements here"
          id="app.smartComponents.Person.parts.Dietaries.placeholder"
        />
      </WithStyles(EditablePlaceholder)>
    }
  />
</WithStyles(GridContainer)>
`;

exports[`<Dietaries /> VARIANTS.COUNT should match snapshot 1`] = `
<WithStyles(GridContainer)
  direction="column"
  spacing={0}
  wrap="nowrap"
>
  <WithStyles(GridItem)>
    <WithStyles(Connect(WithSimplifyResaga(Empty)))
      description={
        <WithStyles(EditablePlaceholder)>
          <FormattedMessage
            defaultMessage="Enter dietary requirements here"
            id="app.smartComponents.Person.parts.Dietaries.placeholder"
          />
        </WithStyles(EditablePlaceholder)>
      }
    />
  </WithStyles(GridItem)>
</WithStyles(GridContainer)>
`;

exports[`<Dietaries /> VARIANTS.COUNT should match snapshot 2`] = `0`;

exports[`<Dietaries /> VARIANTS.ICON should match snapshot if value's length is greater than 0 1`] = `
<WithStyles(GridItem)>
  <WithStyles(Tooltip)
    isLight={true}
    title={
      <WithStyles(GridItem)>
        <WithStyles(GridContainer)
          direction="column"
          wrap="nowrap"
        >
          <WithStyles(GridItem)>
            <Memo(Connect(WithSimplifyResaga(Dietary)))
              id={1}
              readOnly={false}
              variant="textOnly"
            />
          </WithStyles(GridItem)>
          <WithStyles(GridItem)>
            <Memo(Connect(WithSimplifyResaga(Dietary)))
              id={2}
              readOnly={false}
              variant="textOnly"
            />
          </WithStyles(GridItem)>
        </WithStyles(GridContainer)>
      </WithStyles(GridItem)>
    }
  >
    <WithStyles(DietaryIcon)
      noDietary={false}
      size="extraSmall"
    />
  </WithStyles(Tooltip)>
</WithStyles(GridItem)>
`;

exports[`<Dietaries /> VARIANTS.ICON should match snapshot if value's length is less than 1 1`] = `
<WithStyles(GridItem)>
  <WithStyles(Tooltip)
    isLight={true}
    title={false}
  >
    <WithStyles(DietaryIcon)
      noDietary={true}
      size="extraSmall"
    />
  </WithStyles(Tooltip)>
</WithStyles(GridItem)>
`;

exports[`<Dietaries /> VARIANTS.ICON should match snapshot if value's length is less than 1 and noDietary is true 1`] = `""`;

exports[`<Dietaries /> VARIANTS.LOGIC should match snapshot 1`] = `
<ConnectFunction
  id={null}
  keyPath={Array []}
  value={
    Array [
      1,
      2,
    ]
  }
/>
`;

exports[`<Dietaries /> VARIANTS.LOGIC should match snapshot if value is empty array 1`] = `
<ConnectFunction
  id={null}
  keyPath={Array []}
  value={Array []}
/>
`;

exports[`<Dietaries /> VARIANTS.TEXT_ONLY should render text only if value's length prop is greater than 0 1`] = `
<WithStyles(GridItem)>
  <WithStyles(GridContainer)
    direction="column"
    wrap="nowrap"
  >
    <WithStyles(GridItem)
      key="dietary.1"
    >
      <ConnectFunction
        id={1}
        readOnly={false}
        variant="textOnly"
      />
    </WithStyles(GridItem)>
    <WithStyles(GridItem)
      key="dietary.2"
    >
      <ConnectFunction
        id={2}
        readOnly={false}
        variant="textOnly"
      />
    </WithStyles(GridItem)>
  </WithStyles(GridContainer)>
</WithStyles(GridItem)>
`;

exports[`<Dietaries /> VARIANTS.TEXT_ONLY should render text only if value's length prop is less than 1 1`] = `
<WithStyles(GridItem)>
  <WithStyles(GridContainer)
    direction="column"
    wrap="nowrap"
  >
    <WithStyles(GridItem)
      key="dietary.1"
    >
      <ConnectFunction
        id={1}
        readOnly={false}
        variant="textOnly"
      />
    </WithStyles(GridItem)>
    <WithStyles(GridItem)
      key="dietary.2"
    >
      <ConnectFunction
        id={2}
        readOnly={false}
        variant="textOnly"
      />
    </WithStyles(GridItem)>
  </WithStyles(GridContainer)>
</WithStyles(GridItem)>
`;

exports[`<Dietaries /> renderDietaries() should renderDietaries 1`] = `
<div>
  <WithStyles(GridContainer)
    direction="column"
    wrap="nowrap"
  >
    renderDietary
    renderDietary
  </WithStyles(GridContainer)>
</div>
`;

exports[`<Dietaries /> renderDietary() should renderDietary 1`] = `
<div>
  <Component />
</div>
`;
